--- a/apps/package.json
+++ b/apps/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "angular2": "^2.0.0-alpha.46",
+    "rxjs": "^5.0.0-alpha.10",
     "systemjs": "^0.19.6",
     "traceur-runtime": "0.0.59"
   },
